Bug 379463 - Advanced Color Picker stops updating after picking a color with the Zoom Selector UI
Summary: Advanced Color Picker stops updating after picking a color with the Zoom Sele...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 3.1.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jasper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-03 04:59 UTC by 301993892
Modified: 2019-11-10 12:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen capture of the bug occurring (413.60 KB, image/gif)
2017-05-03 04:59 UTC, 301993892
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 301993892 2017-05-03 04:59:37 UTC
Created attachment 105322 [details]
Screen capture of the bug occurring

After using the Zoom Selector UI to pick a color, and going to the canvas and picking another color, the Advanced Color Selector doesn't update, but other selectors like Color Sliders do. I need to pick a color from the Advanced Color Selector to 'unfreeze' it

Steps to replicate this problem:
1) Open the Zoom Selector UI from the Advanced Color Selector
2) Pick any color
3) Go to the Canvas and color-pick any other color
4) The Advanced Color Selector doesn't update

I've been experiencing this problem with 3.1.3, 3.1.3-beta, 3.1.1, but I don't know if it's present before then.

The attachment is a GIF of me performing the steps and consequences I just mentioned.
Comment 1 Nicholas LaPointe 2017-05-17 20:55:51 UTC
I can confirm.
I noticed that step 3 isn't actually needed: The Advanced Color Selector isn't being updated after (or while) picking a color from the Zoom Selector.
Comment 2 Halla Rempt 2017-06-05 09:41:19 UTC
I didn't even know we had a zoom selector ui... I can confirm the issue as well.
Comment 3 Diogo 2019-02-21 22:19:20 UTC
4.1.7 Same problem. 
Here is a video showing https://streamable.com/mr11c
Comment 4 Jasper 2019-11-10 12:40:07 UTC
Git commit 170cc3ea48b5759ca93b3343f6ac74f9d5733b4c by Jasper Hartog.
Committed on 30/10/2019 at 12:33.
Pushed by rempt into branch 'master'.

Re-activate Advanced Color Selector after popup

Only block the Color Selector when it actualy updates the resource.

M  +2    -5    plugins/dockers/advancedcolorselector/kis_color_selector_base.cpp
M  +2    -0    plugins/dockers/advancedcolorselector/kis_color_selector_base.h

https://invent.kde.org/kde/krita/commit/170cc3ea48b5759ca93b3343f6ac74f9d5733b4c