Re-activate Advanced Color Selector after popup

Only block the Color Selector when it actualy updates the resource.

BUG: 379463